--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "nightly-2025-09-12"
+channel = "nightly"
 profile = "minimal"
 components = ["rustfmt", "clippy"]
 targets = [
